--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ body{
     
     .conteudo h3{
         font-size: 1.6rem;
-        margin: 15px 0;
+        margin: 25px 0;
         color: var(--text-color)
     }
     
@@ -152,23 +152,105 @@ body{
 
     .conteudo h1{
         font-size: 1.6rem;
-        margin: 15px;
+        /* margin: 15px; */
         color: var(--text-color);
     }
     
     .conteudo h3{
         font-size: 1.8rem;
-        margin: 15px;
+        /* margin: 15px; */
         color: var(--text-color)
     }
     
     .conteudo p{
         font-size: 1rem;
-        margin: 15px;
+        /* margin: 15px; */
         line-height: 28px;
         color: var(--p-color);
         font-weight: 500;
-        width: 450px
+        width: 100%;
+    }
+}
+
+@media all and (max-width: 720px){
+    .container{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
     }
 
+    .signos-event {
+        width: 100%;
+        margin: 30px 0;
+    }
+
+    .signos-event h1{
+        font-size: 1.5rem;
+    }
+
+    .signos-conteudos{
+        width: 100%;
+    }
+
+    .conteudo{
+        text-align: center;
+    }
+
+    .conteudo h1{
+        font-size: 1.4rem;
+        /* margin: 15px; */
+        color: var(--text-color);
+    }
+    
+    .conteudo h3{
+        font-size: 1.8rem;
+        /* margin: 15px; */
+        color: var(--text-color)
+    }
+    
+    .conteudo p{
+        font-size: 1rem;
+        /* margin: 15px; */
+        line-height: 28px;
+        color: var(--p-color);
+        font-weight: 500;
+        width: 100%;
+    }
+}
+
+
+@media all and (max-width: 500px){
+
+    .signos-event h1{
+        font-size: 1rem;
+    }
+
+    .signos-button{
+        width: 280px;
+    }
+
+    .signos-button-content{
+        width: 80px;
+        margin: 2px;
+    }
+
+    .conteudo h1{
+        font-size: .9rem;
+        color: var(--text-color);
+        margin: 5px
+    }
+    
+    .conteudo h3{
+        font-size: .9rem;
+        margin: 5px;
+        color: var(--text-color)
+    }
+    
+    .conteudo p{
+        font-size: .8rem;
+        line-height: 28px;
+        color: var(--p-color);
+        font-weight: 500;
+        width: 100%;
+    }
 }
